--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+  width: 100%;
+}
+
 * {
   font-family: "Lato", Helvetica sans-serif;
   list-style: none;
@@ -5,14 +9,6 @@
 }
 * h1 {
   font-weight: 700;
-}
-* h2 {
-  font-size: 16px;
-  font-weight: 400;
-}
-* p {
-  font-size: 13px;
-  font-weight: 400;
 }
 * a {
   text-decoration: none;
@@ -104,64 +100,6 @@
   transition: 1s;
 }
 
-.searcherBox {
-  margin: 0;
-  float: right;
-  width: 100%;
-  margin-right: 1rem;
-}
-.searcherBox * {
-  background-color: gray;
-}
-.searcherBox .container-4 {
-  padding: 0;
-  margin: 0;
-  white-space: nowrap;
-}
-.searcherBox .container-4 input#search {
-  width: 89%;
-  height: 2rem;
-  background: white;
-  float: left;
-  color: #fff;
-  -webkit-border-radius: 5%;
-  -moz-border-radius: 5%;
-  border-radius: 5%;
-}
-.searcherBox .container-4 input#search::-webkit-input-placeholder {
-  color: #65737e;
-}
-.searcherBox .container-4 input#search:-moz-placeholder {
-  /* Firefox 18- */
-  color: #65737e;
-}
-.searcherBox .container-4 input#search::-moz-placeholder {
-  /* Firefox 19+ */
-  color: #65737e;
-}
-.searcherBox .container-4 input#search:-ms-input-placeholder {
-  color: #65737e;
-}
-.searcherBox .container-4 button.icon {
-  -webkit-border-top-right-radius: 5px;
-  -webkit-border-bottom-right-radius: 5px;
-  -moz-border-radius-topright: 5px;
-  -moz-border-radius-bottomright: 5px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  padding-left: 0.5rem;
-  border: 1px solid black;
-  background: gray;
-  height: 2rem;
-  width: 11%;
-  opacity: 0;
-  font-size: 100%;
-}
-.searcherBox .container-4 button.icon, .searcherBox .container-4:active button.icon, .searcherBox .container-4:focus button.icon {
-  outline: none;
-  opacity: 1;
-}
-
 .arrow-down {
   width: 0;
   height: 0;
@@ -170,64 +108,50 @@
   border-top: 5px solid #6c7a89;
 }
 
-header {
+nav {
+  float: left;
   width: 100%;
+}
+nav * {
   background-color: white;
 }
-header * {
-  background-color: white;
-}
-header .headerColumns {
+nav .headerColumns {
   width: 100%;
+  padding: 0;
+  margin: 0;
   display: flex;
   flex-flow: row;
   justify-content: space-between;
 }
-header .headerColumns h1 {
-  height: auto;
-  float: left;
+nav .headerColumns .leftSideOfHeader {
+  width: 50%;
 }
-header .headerColumns .leftSideOfHeader {
-  width: 30%;
+nav .headerColumns .leftSideOfHeader h1 {
+  margin-left: 3rem;
 }
-header .headerColumns .rightSideOfHeader {
-  width: 70%;
+nav .headerColumns .rightSideOfHeader {
+  width: 50%;
   display: flex;
   flex-flow: row;
   justify-content: flex-end;
 }
-header .headerColumns .rightSideOfHeader .signUpButton {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  border-left: 1px solid gray;
-}
-header .headerColumns .rightSideOfHeader .signUpButton div {
-  padding-top: 0.2rem;
-}
-header .headerColumns .rightSideOfHeader .signInButton {
-  padding-right: 1rem;
-  border-right: 1px solid gray;
-}
-header .headerColumns .rightSideOfHeader .signInButton div {
-  padding-top: 0.2rem;
-}
-header .headerColumns .rightSideOfHeader .langUK {
-  padding-top: 0.5rem;
-  padding-left: 1rem;
+nav .headerColumns .rightSideOfHeader .langUK {
+  margin-right: 3rem;
+  padding-top: 1.5rem;
   display: flex;
   flex-direction: row;
   position: relative;
   cursor: pointer;
 }
-header .headerColumns .rightSideOfHeader .langUK img {
+nav .headerColumns .rightSideOfHeader .langUK img {
   cursor: pointer;
 }
-header .headerColumns .rightSideOfHeader .langUK .arrow-down {
+nav .headerColumns .rightSideOfHeader .langUK .arrow-down {
   margin-top: 0.5rem;
   margin-left: 0.2rem;
   cursor: pointer;
 }
-header .headerColumns .rightSideOfHeader .langChooser {
+nav .headerColumns .rightSideOfHeader .langChooser {
   background: white;
   padding: 1rem;
   border: 1px solid gray;
@@ -237,14 +161,14 @@ header .headerColumns .rightSideOfHeader .langChooser {
   flex-direction: column;
   z-index: 99;
 }
-header .headerColumns .rightSideOfHeader .langChooser a {
+nav .headerColumns .rightSideOfHeader .langChooser a {
   margin-bottom: 1rem;
   background-color: white;
 }
-header .headerColumns .rightSideOfHeader .langChooser a:last-of-type {
+nav .headerColumns .rightSideOfHeader .langChooser a:last-of-type {
   margin: 0;
 }
-header .headerColumns .rightSideOfHeader .hidden {
+nav .headerColumns .rightSideOfHeader .hidden {
   display: none;
 }
 
